@@ -19,6 +19,9 @@ Default Qt Client
 - Optional sound event for user typing private message
 - Replace readonly edit fields by statis label in "User info" dialog
 - Only show available info in "User info" dialog
+- Ability to sort Ban List
+- Context menu to move banned/unbanned users to banned/unbanned list
+- Ban time displays in local format
 Android Client
 - users who have the "User can make other users channel operator" right will no longer be asked for the operator password for granting/revoking channel operator
 iOS Client
